--- a/web/source/package.json
+++ b/web/source/package.json
@@ -24,7 +24,7 @@
     "papaparse": "^5.3.2",
     "photoswipe": "^5.3.3",
     "photoswipe-dynamic-caption-plugin": "^1.2.7",
-    "photoswipe-video-plugin": "^1.0.2",
+    "plyr": "^3.7.8",
     "psl": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
