--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -9,6 +9,9 @@ on:
     - cron:  '0 1 * * 6'
 jobs:
   semgrep-full:
+      permissions:
+        contents: read # for actions/checkout to fetch code
+        security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       runs-on: ubuntu-latest
       container:
         image: returntocorp/semgrep
